fix: remove overflow scroll from faq item

--- a/src/components/FaqList/FaqItem/style.css
+++ b/src/components/FaqList/FaqItem/style.css
@@ -44,6 +44,5 @@
 
 .faq-open-answer {
   max-height: 600px;
-  overflow: scroll;
   transition: 0.5s ease;
 }
